@@ -622,7 +622,6 @@ int do_replace_loop(const char *prevanswer, const filestruct *begin,
     int beginline = 0, caretdollar = 0;
 #endif
     filestruct *fileptr = NULL;
-    char *copy;
 
     switch (*i) {
 	case -1:	/* Aborted enter. */
@@ -716,6 +715,9 @@ int do_replace_loop(const char *prevanswer, const filestruct *begin,
 	    do_replace_highlight(FALSE, exp_word);
 	    free(exp_word);
 	    curs_set(1);
+
+	    if (*i == -1)	/* We canceled the replace. */
+		break;
 	}
 
 #ifdef HAVE_REGEX_H
@@ -726,8 +728,8 @@ int do_replace_loop(const char *prevanswer, const filestruct *begin,
 #endif
 
 	if (*i > 0 || replaceall) {	/* Yes, replace it!!!! */
-	    long length_change;
-	    size_t match_len;
+	    char *copy;
+	    int length_change;
 
 	    if (*i == 2)
 		replaceall = 1;
@@ -740,13 +742,6 @@ int do_replace_loop(const char *prevanswer, const filestruct *begin,
 	    }
 
 	    length_change = strlen(copy) - strlen(current->data);
-
-#ifdef HAVE_REGEX_H
-	    if (ISSET(USE_REGEXP))
-		match_len = regmatches[0].rm_eo - regmatches[0].rm_so;
-	    else
-#endif
-		match_len = strlen(prevanswer);
 
 #ifndef NANO_SMALL
 	    if (current == mark_beginbuf && mark_beginx > current_x) {
@@ -780,10 +775,7 @@ int do_replace_loop(const char *prevanswer, const filestruct *begin,
 	    edit_refresh();
 	    set_modified();
 	    numreplaced++;
-
-	} else if (*i == -1)	/* Break out of the loop, else do
-				 * nothing and continue loop. */
-	    break;
+	}
     }
 
     /* If text has been added to the magicline, make a new magicline. */
